<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/headerView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:fitsSystemWindows="false">

        <!--<android.support.design.widget.CollapsingToolbarLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent">-->

        <!--</android.support.design.widget.CollapsingToolbarLayout>-->

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/action_bar_size"
            android:background="@color/colorPrimary"
            app:layout_scrollFlags="snap"
            app:titleTextAppearance="@style/GanyingTitleAppearance"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/refreshLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|left"
                    android:text="@string/tx_name"
                    android:textColor="@color/item_tx_color"
                    android:textSize="@dimen/item_tx_size" />

                <EditText
                    android:id="@+id/name"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:background="@null"
                    android:hint="@string/tx_hint_name"
                    android:textColor="@color/item_tx_color"
                    android:textSize="@dimen/item_tx_size" />
            </LinearLayout>

            <include layout="@layout/item_divider" />

            <LinearLayout
                android:id="@+id/chooseSrd"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="?attr/selectableItemBackground"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|left"
                    android:text="@string/tx_link_srd"
                    android:textColor="@color/item_tx_color"
                    android:textSize="@dimen/item_tx_size" />

                <TextView
                    android:id="@+id/txSrd"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:background="@null"
                    android:drawablePadding="8dp"
                    android:drawableRight="@drawable/ic_arrow_right_grey_500"
                    android:gravity="center_vertical"
                    android:text="@string/tx_select"
                    android:textColor="@color/item_tx_color"
                    android:textSize="@dimen/item_tx_size" />
            </LinearLayout>

            <include layout="@layout/item_divider" />

            <LinearLayout
                android:id="@+id/chooseDevices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="45dp"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|left"
                    android:text="@string/tx_link_device"
                    android:textColor="@color/item_tx_color"
                    android:textSize="@dimen/item_tx_size" />

                <TextView
                    android:id="@+id/txDevices"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:background="@null"
                    android:drawablePadding="8dp"
                    android:drawableRight="@drawable/ic_arrow_right_grey_500"
                    android:gravity="center_vertical"
                    android:text="@string/tx_select"
                    android:textColor="@color/item_tx_color"
                    android:textSize="@dimen/item_tx_size" />
            </LinearLayout>

            <include layout="@layout/item_divider" />

            <LinearLayout
                android:id="@+id/yourenRoot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="45dp"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|left"
                    android:text="@string/tx_open_light_has"
                    android:textColor="@color/item_tx_color"
                    android:textSize="@dimen/item_tx_size" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2">

                    <net.suntrans.looney.widgets.SwitchButton
                        android:id="@+id/btYouren"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerInParent="true"
                        android:checked="true"
                        android:drawablePadding="8dp"
                        android:gravity="center_vertical"
                        android:textColor="@color/item_tx_color"
                        app:kswBackDrawable="@drawable/cswitch_bottom_white"
                        app:kswThumbDrawable="@drawable/cswitch_top_circle" />
                </RelativeLayout>
            </LinearLayout>

            <include layout="@layout/item_divider" />

            <LinearLayout
                android:id="@+id/wurenRoot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="45dp"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|left"
                    android:text="@string/tx_close_light_no"
                    android:textColor="@color/item_tx_color"
                    android:textSize="@dimen/item_tx_size" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2">

                    <net.suntrans.looney.widgets.SwitchButton
                        android:id="@+id/btWuren"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerInParent="true"
                        android:checked="true"
                        android:drawablePadding="8dp"
                        android:gravity="center_vertical"
                        android:textColor="@color/item_tx_color"
                        app:kswBackDrawable="@drawable/cswitch_bottom_white"
                        app:kswThumbDrawable="@drawable/cswitch_top_circle" />
                </RelativeLayout>
            </LinearLayout>

            <include layout="@layout/item_divider" />

            <LinearLayout
                android:id="@+id/delayRoot"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|left"
                    android:text="@string/tx_delay"
                    android:textColor="@color/item_tx_color"
                    android:textSize="@dimen/item_tx_size" />

                <TextView
                    android:id="@+id/delayTime"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:drawablePadding="8dp"
                    android:drawableRight="@drawable/ic_arrow_right_grey_500"
                    android:gravity="center_vertical|right"
                    android:text="0分"
                    android:textColor="@color/item_tx_color"
                    android:textSize="@dimen/item_tx_size" />
            </LinearLayout>

            <include layout="@layout/item_divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center|left"
                    android:text="@string/tx_time"
                    android:textColor="@color/item_tx_color"
                    android:textSize="@dimen/item_tx_size" />

                <TextView
                    android:id="@+id/addTime"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical|right"
                    android:text="@string/tx_add"
                    android:textColor="#1AAD19"
                    android:textSize="@dimen/item_tx_size" />
            </LinearLayout>

            <include layout="@layout/item_divider" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/timeList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager">

            </android.support.v7.widget.RecyclerView>

            <View
                android:layout_width="match_parent"
                android:layout_height="50dp" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:src="@drawable/ic_done_white_24dp"
        app:backgroundTint="@color/colorPrimary"
        app:fabSize="normal"
        app:layout_anchor="@+id/scrollView"
        app:layout_anchorGravity="bottom|right|end"
        app:layout_behavior="net.suntrans.suntranscomponents.behavior.FBehavior"
        app:pressedTranslationZ="8dp"
        app:rippleColor="@color/colorPrimary"
        app:useCompatPadding="true" />

</android.support.design.widget.CoordinatorLayout>




